Covered a few more Lua points

--- a/Report/document.bib
+++ b/Report/document.bib
@@ -35,4 +35,16 @@
     pages           = {635--652},
     year            = {1996},
     publisher       = {}
+},
+@book{Ierusalimschy:2013:PLT:2502646,
+    author = {Ierusalimschy, Roberto},
+    title = {Programming in Lua, Third Edition},
+    year = {2013},
+    isbn = {859037985X, 9788590379850},
+    edition = {3rd},
+    publisher = {Lua.Org},
+},
+@misc{eLua,
+    title           = {{eLua}},
+    howpublished    = {\url{http://www.eluaproject.net/}},
 }
