continued writing about lua

--- a/Report/document.bib
+++ b/Report/document.bib
@@ -48,3 +48,7 @@
     title           = {{eLua}},
     howpublished    = {\url{http://www.eluaproject.net/}},
 }
+@misc{LuaJIT,
+    title           = {{LuaJIT}},
+    howpublished    = {\url{http://luajit.org/}},
+}
