--- a/Report/document.bib
+++ b/Report/document.bib
@@ -22,10 +22,8 @@
 },
 @INPROCEEDINGS{Ierusalimschy01theevolution,
     author          = {{Roberto Ierusalimschy and Luiz Henrique de Figueiredo and Waldemar Celes}},
-    title           = {The Evolution of an Extension Language: A History of Lua},
     booktitle       = {IN PROCEEDINGS OF V BRAZILIAN SYMPOSIUM ON PROGRAMMING LANGUAGES},
     year            = {2001},
-    pages           = {14--28},
     publisher       = {}
 },
 @INPROCEEDINGS{Ierusalimschy02software,
@@ -51,4 +49,17 @@
 @misc{LuaJIT,
     title           = {{LuaJIT}},
     howpublished    = {\url{http://luajit.org/}},
+}
+@book{Lamport:1989:LDP:63364,
+    author = {Lamport, Leslie},
+    title = {Latex: A Document Preparation System},
+    year = {1986},
+    isbn = {0-201-15790-X},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, MA, USA},
+},
+@article{IerusalimschyImplementation,
+    author = {Ierusalimschy, Roberto and Henrique de Figueiredo, Luiz and Celes, Waldemar},
+    year = {2005},
+    title = {The Implementation of Lua 5.0},
 }
