Wrote some more about Lua

--- a/Report/document.bib
+++ b/Report/document.bib
@@ -62,4 +62,23 @@
     author = {Ierusalimschy, Roberto and Henrique de Figueiredo, Luiz and Celes, Waldemar},
     year = {2005},
     title = {The Implementation of Lua 5.0},
+},
+@misc{tecgrafLibAndTools,
+    author = {Luiz Henrique de Figueiredo},
+    title = {Libraries and tools for Lua},
+    howpublished = {\url{http://webserver2.tecgraf.puc-rio.br/~lhf/ftp/lua}},
+    year = {2017}
 }
+@misc{LuaSource,
+    title = {Lua source code},
+    howpublished = {\url{https://github.com/lua/lua}},
+},
+@misc{CheatEngine,
+    title = {Cheat Engine},
+    howpublished = {\url{http://www.cheatengine.org}},
+},
+@misc{COCOS2D,
+    title = {COCOS2D},
+    howpublished = {\url{http://cocos2d-x.org/}},
+}
+
